[package]
name = "rust_discord_duel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

members = [
    "duel_game",
    "game_amazons",
]

[dependencies]
duel_game = { path = "duel_game" }
game_amazons = { path = "game_amazons" }
konst = { version = "0.3.5", default-features = false, features = ["parsing"] }
anyhow = "1.0.72"
rand = "0.8.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
wasmtime = "11.0.1"
wasmtime-wasi = "11.0.1"
wasi-common = "11.0.1"
