[package]
name = "game_amazons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duel_game = { path = "../duel_game" }
serenity = { version = "0.11.6", default-features = false }
rand = "0.8.5"
anyhow = "1.0.72"
